--- a/16_Shop_MultiProduct/theme/style.red.css
+++ b/16_Shop_MultiProduct/theme/style.red.css
@@ -26,3 +26,10 @@ body{
 	font-family: tahoma;
 	
 }
+.vc_custom_1536911229630 {
+    padding-bottom: 200px !important;
+    background-image: url(https://cdn.anpero.com/images/54/112019/h48-10f442019111300463620.jpg) !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+}
