--- a/16_Shop_MultiProduct/theme/wp-content/themes/gokko/assets/fonts/gokko/style.css
+++ b/16_Shop_MultiProduct/theme/wp-content/themes/gokko/assets/fonts/gokko/style.css
@@ -1,25 +1,26 @@
 @font-face {
-  font-family: 'Gokko-Icon';
-  font-display: auto;
-  src: local('Gokko-Icon'), url('fonts/Gokko-Icon05fa.woff?v4h9kt') format('woff');
-  src:  url('fonts/Gokko-Icon05fa.eot?v4h9kt');
-  src:  url('fonts/Gokko-Icon05fa.eot?v4h9kt#iefix') format('embedded-opentype'),
-  url('fonts/Gokko-Icon05fa.ttf?v4h9kt') format('truetype'),
-  url('fonts/Gokko-Icon05fa.woff?v4h9kt') format('woff'),
-  url('fonts/Gokko-Icon05fa.svg?v4h9kt#Gokko-Icon') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'Gokko-Icon';
+    font-display: auto;
+    src: local('Gokko-Icon'), url('fonts/Gokko-Icon05fa.woff?v4h9kt') format('woff');
+    src: url('fonts/Gokko-Icon05fa.eot?v4h9kt');
+    src: url('fonts/Gokko-Icon05fa.eot?v4h9kt#iefix') format('embedded-opentype'), 
+        url('/theme/wp-content/themes/gokko/assets/fonts/gokko/fonts/Gokko-Icon05fa.ttf?v4h9kt') format('truetype'), 
+        url('/theme/wp-content/themes/gokko/assets/fonts/gokko/fonts/Gokko-Icon05fa.woff?v4h9kt') format('woff'), 
+        url('/theme/wp-content/themes/gokko/assets/fonts/gokko/fonts/Gokko-Icon05fa.svg?v4h9kt#Gokko-Icon') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
-.gokko-icon{
-  font-family: 'Gokko-Icon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+.gokko-icon {
+    font-family: 'Gokko-Icon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-play:before {
