--- a/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -45,7 +45,8 @@
     </noscript>
 
     @RenderSection("health", required: false)
-
+    @RenderSection("Styles", required: false)
+    
 </head>
 <body class="page-template-fullwidth page wp-embed-responsive  woocommerce-no-js  wpb-js-composer vc_responsive">
     <a href="javascript:void(0)" class="overlay-body"></a>
