--- a/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -234,7 +234,7 @@
                                         {
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-mega-menu menu-item-has-children item-megamenu">
                                                 <a href="@item.DefaultLink" class="disable-link">@item.Name</a>
-                                                <div class="sub-menu megamenu lazy" data-responsive="" style="width:720px;background-size: cover;background-position: center;" data-src="@item.Images">
+                                                <div class="sub-menu megamenu lazy" style="width:720px;background-size: cover;background-position: center;height:auto;" data-src="@item.Images">
                                                     <p>
                                                         <div class="vc_row wpb_row vc_row-fluid ovic_custom_5b768530ccd86 vc_custom_1533638258332">
                                                             <div class="wpb_column vc_column_container vc_col-sm-4">
