--- a/16_Shop_MultiProduct/theme/wp-content/themes/gokko/assets/css/style.css
+++ b/16_Shop_MultiProduct/theme/wp-content/themes/gokko/assets/css/style.css
@@ -1,32 +1,4 @@
-/*-------------------------------------------------------------------------/*
-/*-------------------------------------------------------------------------/*
-[Table of contents]
-[Typography]
-    BODY:
-        Font family: "Glacial Indifference", sans-serif;
-        Font size: 14px;
-        Line height: 20px;
-        Text color: #888895;
-        Background color: #ffffff;
-    HEADING:
-        Text color: #4c4b6c;
-[Component module]
-    BANNER EFFECT
-    ANIMATION
-    SLICK
-    WOOCOMMERCE DATAS
-    DEFAULT DATAS
-    BODY DATAS
-    HEADER
-    WIDGETS
-    PRODUCT SINGLE
-    PRODUCT ITEM
-    SHOP PAGE
-    BLOG POST
-    INNER PAGES
-    SHORT CODE
-    FOOTER
-/*-------------------------------------------------------------------------*/
+
 /*==========================================================================
 BANNER EFFECT
 ===========================================================================*/
@@ -13756,3 +13728,14 @@ ul.custom-datas li:not(:first-child){
 .widget_shopping_cart .widgettitle{
     display: none;
 }
+.flex-control-paging li {
+    list-style: none;
+    padding:5px;
+    margin:5px;
+    width:30px;
+}
+    .flex-control-paging li .active {
+        background-color: #D11222;
+        text-align: center;
+        color: white;
+    }
