--- a/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -201,7 +201,7 @@
                                 </span>
                                 <span class="gokko-group">
                                     <span class="text">Giỏ hàng</span>
-                                    <span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>0.00</span>
+                                    <span class=""><span class="woocommerce-Price-currencySymbol">&#36;</span>0.00</span>
                                 </span>
                             </a>
                             <div class="widget woocommerce widget_shopping_cart"><div class="widget_shopping_cart_content"></div></div>
@@ -234,7 +234,7 @@
                                         {
                                             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-mega-menu menu-item-has-children item-megamenu">
                                                 <a href="@item.DefaultLink" class="disable-link">@item.Name</a>
-                                                <div class="sub-menu megamenu lazy" style="width:720px;background-size: cover;background-position: center;height:auto;" data-src="@item.Images">
+                                                <div class="sub-menu megamenu lazy" style="width:520px;background-repeat: no-repeat;background-position: right;height:auto;" data-src="@item.Images">
                                                     <p>
                                                         <div class="vc_row wpb_row vc_row-fluid ovic_custom_5b768530ccd86 vc_custom_1533638258332">
                                                             <div class="wpb_column vc_column_container vc_col-sm-4">
