--- a/16_Shop_MultiProduct/Views/Product/GetByCategory.cshtml
+++ b/16_Shop_MultiProduct/Views/Product/GetByCategory.cshtml
@@ -26,7 +26,7 @@
                         <h3 class="product-name product_title">
                             <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">@item.PrName</a>
                         </h3>
-                        <div>@item.Warranty tháng</div>
+                        <div>Bảo hành @item.Warranty tháng</div>
                         <span class="price">
                             @if (item.IsSale)
                             {
