--- a/16_Shop_MultiProduct/Views/Product/Index.cshtml
+++ b/16_Shop_MultiProduct/Views/Product/Index.cshtml
@@ -22,6 +22,7 @@
         <meta property="og:url" content="@ViewBag.WebsiteUrl" />
         <meta property="og:image" content="@item.Images" />
         <link rel="canonical" href="@ViewBag.WebsiteUrl" />
+
     }
     @section Styles {
         @*<link href="//cdn.anpero.com/cdn/plugins/fancybox-3/src/css/core.css" rel="stylesheet" />
@@ -59,7 +60,9 @@
                 margin-top: 15px;
             }
         </style>
+        <link href="/theme/wp-content/themes/gokko/assets/css/content-single-product.css" rel="stylesheet" />
     }
+
     <div class="single-thumb-vertical main-container shop-page no-sidebar">
         <div class="container">
             <div class="row">
@@ -76,11 +79,16 @@
                 </div>
                 <div class="main-content col-sm-12">
                     <div class="product type-product status-publish first instock product_cat-camera-photo product_tag-appliances product_tag-fashion product_tag-glass product_tag-women has-post-thumbnail shipping-taxable purchasable product-type-variable">
-                        <div class="woocommerce-product-gallery woocommerce-product-gallery--with-images woocommerce-product-gallery--columns-4 images" data-columns="4" style="opacity: 0; transition: opacity .25s ease-in-out;">
-                            <figure class="woocommerce-product-gallery__wrapper">                                
-                               
+                        <div class="woocommerce-product-gallery woocommerce-product-gallery--with-images woocommerce-product-gallery--columns-4 images" data-columns="4">
+                            <figure class="woocommerce-product-gallery__wrapper">
+
                                 @foreach (var prSlide in item.ImagesSlide)
                                 {
+                                    <div data-thumb="@prSlide" data-thumb-alt="" class="woocommerce-product-gallery__image">
+                                        <a href="@prSlide">
+                                            <img width="600" height="600" src="@prSlide" class="wp-post-image" alt="" title="@item.PrName" data-caption="" data-src="@prSlide" data-large_image="@prSlide" data-large_image_width="700" data-large_image_height="700" srcset="@prSlide 600w, @prSlide 150w, @prSlide 300w, @prSlide  220w, @prSlide 700w" sizes="(max-width: 600px) 100vw, 600px" />
+                                        </a>
+                                    </div>
                                     <div data-thumb="@prSlide" data-thumb-alt="" class="woocommerce-product-gallery__image">
                                         <a href="@prSlide">
                                             <img width="600" height="600" src="@prSlide" class="wp-post-image" alt="" title="@item.PrName" data-caption="" data-src="@prSlide" data-large_image="@prSlide" data-large_image_width="700" data-large_image_height="700" srcset="@prSlide 600w, @prSlide 150w, @prSlide 300w, @prSlide  220w, @prSlide 700w" sizes="(max-width: 600px) 100vw, 600px" />
@@ -99,7 +107,7 @@
                             <div class="flash"></div>
                             @if (item.Warranty > 0)
                             {
-                              <div>Bảo hành: @item.Warranty tháng</div>
+                                <div>Bảo hành: @item.Warranty tháng</div>
                             }
 
                             <div class="woocommerce-product-rating">
@@ -148,13 +156,28 @@
             </div>
         </div>
     </div>
-    <div class="page-detail">
-        <div class="box-detail">
-            <div class="container">               
-              
-                <!--content-detail-->
+    <div class="product_data_tabs">
+        <div class="container">
+            <div class="woocommerce-tabs wc-tabs-wrapper">
+                <ul class="tabs wc-tabs" role="tablist">
+                    <li class="description_tab active" id="tab-title-description" role="tab" aria-controls="tab-description">
+                        <a href="#" id="tab-description-link">Miêu tả chi tiết</a>
+                    </li>
+                    <li class="additional_information_tab" id="tab-title-paymentDetail" role="tab" aria-controls="tab-paymentDetail">
+                        <a href="#" id="tab-paymentDetail-link">Hướng dẫn thanh toán</a>
+                    </li>
+                </ul>
+                <div class="woocommerce-Tabs-panel woocommerce-Tabs-panel--description panel entry-content wc-tab" id="tab-description" role="tabpanel" aria-labelledby="tab-title-description" style="display: block;">
+                    @Html.Raw(item.Detail)
+                </div>
+                <div class="woocommerce-Tabs-panel woocommerce-Tabs-panel--additional_information panel entry-content wc-tab" id="tab-paymentDetail" role="tabpanel" aria-labelledby="tab-title-additional_information"></div>
+
             </div>
+
         </div>
+    </div>
+
+    <div class="page-detail">
 
         <div class="box-item-product">
             <div class="container">
@@ -232,8 +255,10 @@
     </div>
 
     @section scripts{
-        <script src="//cdn.anpero.com/cdn/plugins/jquery.lazyload.min.js"></script>
-        <script src="//cdn.anpero.com/cdn/plugins/fancybox-3/dist/jquery.fancybox.min.js"></script>
+        <script src="/theme/wp-content/plugins/woocommerce/assets/js/zoom/jquery.zoom.min.js"></script>
+        <link href="~/theme/wp-content/plugins/ovic-toolkit/includes/frontend/assets/css/slick.min.css" rel="stylesheet" />
+        <script src="~/theme/wp-content/plugins/ovic-toolkit/includes/frontend/assets/js/libs/slick.min.js"></script>
+
         <script>
             var price =0;
             var defaultPrice =@Convert.ToInt32(item.SalePrice);
@@ -244,32 +269,36 @@
                 unavailable: "Unavailable",
                 items: "items",
             };
-
-
             $(document).ready(function () {
                 resizeVideo();
-                $(".fancybox").fancybox({
-                    openEffect: 'none',
-                    closeEffect: 'none'
-                });
-               $("img.lazy").lazyload({
-                  effect: "fadeIn"
-               });
-
                 $(window).resize(function () {
                     resizeVideo();
                 });
-                $("#paymentTab").click(function () {
+            });
+            $("#tab-paymentDetail-link").click(function (e) {
+                $("#tab-title-paymentDetail").addClass("active");
+                $("#tab-title-description").removeClass("active");
+                e.preventDefault();
+                $("#tab-paymentDetail").show();
+                $("#tab-description").hide();
                     $.ajax({
                         type: "post",
                         url: "/home/PolicyAjax",
                         data: { type: 6 },
                         success: function (rs) {
-                            $("#paymentDetail").html(rs);
+                            $("#tab-paymentDetail").html(rs);
                         }
                     });
-                });
+
             });
+            $("#tab-description-link").click(function (e) {
+                e.preventDefault();
+                $("#tab-title-paymentDetail").removeClass("active");
+                $("#tab-title-description").addClass("active");
+                $("#tab-paymentDetail").hide();
+                $("#tab-description").show();
+            });
+
             $(".atribute button").click(function () {
                 var propertyId = $(this).attr("data-propertyId");
                 $("button[data-propertyId=" + propertyId + "]").removeClass("btn-success");
@@ -291,8 +320,8 @@
                 $("#pdQuantity").val(newQty<0?0:newQty);
             });
             function resizeVideo() {
-                var contentW = $('#product_tabs_description').width();
-                var iframe = $('#product_tabs_description iframe');
+                var contentW = $('#tab-description').width();
+                var iframe = $('#tab-description iframe');
                 var iframeW = iframe.css('width', contentW - 20);
                 iframe.css('width', iframeW);
                 var iframeH = contentW / 16 * 9;
@@ -317,5 +346,5 @@
             }
         </script>
     }
-}
 
+}
